# olivaw-cli

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
documentation/: 01-project-overview.md  02-architecture.md  03-registry-and-components.md  04-safety-and-drift-detection.md  05-distribution-and-git-registry.md  06-targets-and-templates.md  07-testing-and-ci.md  08-lessons-learned.md  README.md
registry/: registry.toml
registry/comms/cmdvel-protocol/: README.md  component.toml  example.rs
registry/comms/cmdvel-protocol/src/: cmdvel.rs
registry/drivers/l298n/: README.md  component.toml  example.rs
registry/drivers/l298n/src/: l298n.rs
registry/drivers/led/: README.md  component.toml  example.rs
registry/drivers/led/src/: led.rs
registry/kinematics/differential-drive/: README.md  component.toml  example.rs
registry/kinematics/differential-drive/src/: differential_drive.rs
registry/sensors/hcsr04/: README.md  component.toml  example.rs
registry/sensors/hcsr04/src/: hcsr04.rs
registry/sensors/mpu6050/: README.md  component.toml  example.rs
registry/sensors/mpu6050/src/: mpu6050.rs
registry/sensors/rplidar/: README.md  component.toml  example.rs
registry/sensors/rplidar/src/: command.rs  descriptor.rs  info.rs  mod.rs
registry/slam/core-types/: README.md  component.toml
registry/slam/core-types/src/: error.rs  pose.rs  scan.rs
registry/slam/scan-matcher/: README.md  component.toml  example.rs
src/: checksum.rs  main.rs  plan.rs  resolve.rs  suggest.rs  templates.rs  ui.rs
src/commands/: add.rs  check.rs  info.rs  init.rs  list.rs  mod.rs  update.rs
src/project/: cargo.rs  manifest.rs  mod.rs
src/registry/: component.rs  git.rs  index.rs  mod.rs
templates/esp32/: Cargo.toml  README.md  rust-toolchain.toml
templates/esp32/.cargo/: config.toml
templates/esp32/src/: main.rs
templates/linux/: Cargo.toml  README.md
templates/linux/src/: main.rs
templates/rp2040/: Cargo.toml  README.md  build.rs  memory.x
templates/rp2040/.cargo/: config.toml
templates/rp2040/src/: main.rs
tests/: cli.rs  golden.rs  snapshots_cli.rs
(+3 files in other folders)
